# kkmeans

./: .travis.yml  CMakeLists.txt  README.md  common.hpp  main.cpp  print.cpp  print.hpp  utils.cpp  utils.hpp
utils/: generator.py  plot.py
